--- a/Lab3ToDoList/app/build.gradle
+++ b/Lab3ToDoList/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 29
     buildToolsVersion "29.0.2"
     defaultConfig {
-        applicationId "com.kaipada.lab3todolist"
+        applicationId "com.example.lab3"
         minSdkVersion 26
         targetSdkVersion 29
         versionCode 1
