--- a/Lab3ToDoList/app/src/main/AndroidManifest.xml
+++ b/Lab3ToDoList/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.kaipada.lab3todolist">
+    package="com.example.lab3">
 
     <application
         android:allowBackup="true"
@@ -9,6 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".ViewNote"></activity>
+        <activity android:name=".Note" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
